--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Huasheng Huang"
 title_separator          : "-"
 name                     : &name "Huasheng Huang"
 description              : &description "PhD candidate at UvA"
-url                      : https://hhuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://huashenghuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "huashenghuang/hhuang.github.io"
+repository               : "huashenghuang/huashenghuang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
